@@ -29,13 +29,17 @@ class at (
 }
 
   file { '/etc/at.deny':
-    ensure => 'absent'
+    ensure  => 'absent',
+    require => Package['at']
   }
+
+  package { 'at': ensure => latest }
 
   service { 'atd':
     ensure     => 'running',
     enable     => true,
     hasstatus  => true,
     hasrestart => true,
+    require    => Package['at']
   }
 }
