@@ -1,1 +1,0 @@
-centos-combined-x64.yaml
